Bug 555711 - nsAttrValue::ParseNonNegativeIntValue should return PR_FALSE when the value is not valid, r=smaug